--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "install": "^0.13.0",
     "next": "13.4.19",
+    "npm": "^9.8.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
