--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.19",
     "install": "^0.13.0",
     "next": "13.4.19",
+    "next-themes": "^0.2.1",
     "npm": "^9.8.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
