--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev-main": "cp .env.development .env.local && next dev --turbo",
-    "pro-main": "cp .env.production .env.local && next dev --turbo",
+    "dev-main": "cp .env.development .env.local && next dev",
+    "pro-main": "cp .env.production .env.local && next pro",
+    "dev-turbo": "cp .env.development .env.local && next dev --turbo",
+    "pro-turbo": "cp .env.production .env.local && next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
@@ -19,6 +22,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "install": "^0.13.0",
+    "negotiator": "^0.6.3",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
     "npm": "^9.8.1",
@@ -27,8 +31,12 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
+    "server-only": "^0.0.1",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/negotiator": "^0.6.1"
   }
 }
