--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
+    "sass": "^1.66.1",
     "server-only": "^0.0.1",
     "styled-components": "^6.0.7",
     "tailwindcss": "3.3.3",
