- package add next-auth, sass - test LineProvider

--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,6 @@ NEXT_PUBLIC_API_URL=http://139.162.93.115:8082
 NEXT_PUBLIC_MOTOMO_URL=//stage-matomo.yuenchi.ai/
 NEXT_PUBLIC_SITE_ID=1
 
-LINE_CHANNEL_ID='xxxxxx'
-LINE_CHANNEL_SECRET='xxxxxx'
+NEXTAUTH_SECRET=lVWGle5sJEDYGXMKw78/2FFBKvClGioRMUl2kt2lzUE=
+LINE_CLIENT_ID=2000578583
+LINE_CLIENT_SECRET=ab0fba056d797c9955bb4b1592eea1c0
