--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "install": "^0.13.0",
     "negotiator": "^0.6.3",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "npm": "^9.8.1",
     "postcss": "8.4.28",
