--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://139.162.93.115:8082
+NEXT_PUBLIC_API_URL=https://stage-api.yuenchi.ai
 NEXT_PUBLIC_MOTOMO_URL=//stage-matomo.yuenchi.ai/
 NEXT_PUBLIC_SITE_ID=1
 
