--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@ NEXT_PUBLIC_API_URL=https://stage-api.yuenchi.ai
 NEXT_PUBLIC_MOTOMO_URL=//stage-matomo.yuenchi.ai/
 NEXT_PUBLIC_SITE_ID=1
 
+NEXT_PUBLIC_DOMAIN=https://fst-next13-app.joeban0608.work
 NEXTAUTH_SECRET=lVWGle5sJEDYGXMKw78/2FFBKvClGioRMUl2kt2lzUE=
 LINE_CLIENT_ID=2000578583
 LINE_CLIENT_SECRET=ab0fba056d797c9955bb4b1592eea1c0
