fix: env - add NEXTAUTH_URL

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,3 @@
 NEXT_PUBLIC_API_URL=https://vot.cuzzor.com
-NEXT_PUBLIC_MOTOMO_URL=https://matomo.wegoing.io/
-NEXT_PUBLIC_SITE_ID=52
-
+NEXTAUTH_URL=https://fst-next13-app.joeban0608.work/
 NEXTAUTH_SECRET=lVWGle5sJEDYGXMKw78/2FFBKvClGioRMUl2kt2lzUE=
