--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL=https://stage-api.yuenchi.ai
-NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=https://vot.cuzzor.com
+NEXTAUTH_URL=https://fst-next13-app.joeban0608.work/
 NEXTAUTH_SECRET=lVWGle5sJEDYGXMKw78/2FFBKvClGioRMUl2kt2lzUE=
